changed from kmarkdown to GFM

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,9 @@ github_username: morphykuffour
 theme: minima
 plugins:
   - jekyll-feed
+
+# Github Flavored Markdown is better than kmarkdwon
+markdown: GFM
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
