--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: morpkuff@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Arch Linux, scripting, WSL, Windows Customization, keyboards, 
 # baseurl: "" # the subpath of your site, e.g. /blog
-baseurl: "morphykuffour.github.io"
+# baseurl: "morphykuffour.github.io"
 domain: morphykuffour.github.io
 url: https://morphykuffour.github.io # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: morpkuff
@@ -35,7 +35,7 @@ plugins:
   - jekyll-feed
 
 # Github Flavored Markdown is better than kmarkdwon
-markdown: GFM
+# markdown: GFM
 
 # Exclude from processing.
 # The following items will not be processed, by default.
