removed google analytics and added disqus

--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,11 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
 
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "blog"
+      comments: true
